# bethkit

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  bethkit.code-workspace  cbindgen.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/bethkit-bsa/: Cargo.toml
crates/bethkit-bsa/src/: archive.rs  error.rs  hash.rs  lib.rs
crates/bethkit-bsa/src/ba2/: dds.rs  dx10.rs  gnrl.rs  mod.rs
crates/bethkit-bsa/src/bsa/: flags.rs  mod.rs  tes3.rs  tes4.rs
crates/bethkit-bsa/src/write/: ba2_dx10.rs  ba2_gnrl.rs  bsa_tes3.rs  bsa_tes4.rs  dds_parse.rs  mod.rs
crates/bethkit-bsa/tests/: bsa_integration.rs
crates/bethkit-core/: Cargo.toml
crates/bethkit-core/src/: cache.rs  encoding.rs  error.rs  group.rs  implicits.rs  lib.rs  load_order.rs  localized.rs  patcher.rs  plugin.rs  record.rs  strings.rs  test_helpers.rs  types.rs  writer.rs
crates/bethkit-core/src/schema/: enums.rs  mod.rs  shared.rs  view.rs
crates/bethkit-core/src/schema/_archive/fo3/: actors.rs  common.rs  enums.rs  items.rs  magic.rs  mod.rs  quests.rs  simple.rs  world.rs
crates/bethkit-core/src/schema/_archive/fo4/: common.rs  enums.rs  items.rs  magic.rs  mod.rs  simple.rs  world.rs
crates/bethkit-core/src/schema/_archive/fonv/: exclusive.rs  mod.rs
crates/bethkit-core/src/schema/_archive/morrowind/: actors.rs  common.rs  enums.rs  items.rs  magic.rs  mod.rs  quests.rs  simple.rs  world.rs
crates/bethkit-core/src/schema/_archive/oblivion/: actors.rs  common.rs  enums.rs  items.rs  magic.rs  mod.rs  quests.rs  simple.rs  world.rs
crates/bethkit-core/src/schema/_archive/starfield/: actors.rs  common.rs  enums.rs  items.rs  magic.rs  mod.rs  quests.rs  simple.rs  space.rs  world.rs
crates/bethkit-core/src/schema/fo4/: actors.rs  audio.rs  common.rs  enums.rs  items.rs  magic.rs  mod.rs  quests.rs  simple.rs  world.rs
crates/bethkit-core/src/schema/sse/: actors.rs  audio.rs  common.rs  items.rs  magic.rs  mod.rs  projectiles.rs  quests.rs  simple.rs  world.rs
crates/bethkit-core/tests/: esp_roundtrip.rs  localized_roundtrip.rs  skyrim_live.rs
crates/bethkit-ffi/: Cargo.toml  bethkit.h  build.rs
crates/bethkit-ffi/src/: archive.rs  cache.rs  error.rs  group.rs  lib.rs  load_order.rs  plugin.rs  record.rs  schema.rs  strings.rs  types.rs  writer.rs
crates/bethkit-io/: Cargo.toml
crates/bethkit-io/src/: compression.rs  cursor.rs  error.rs  lib.rs  mmap.rs
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: architecture.adoc  archives.adoc  contributing.adoc  error-handling.adoc  index.adoc  language-bindings.adoc  load-order.adoc  plugin-format.adoc  quick-start.adoc  reading-plugins.adoc  schema.adoc  string-tables.adoc  writing-plugins.adoc
tests/integration/: esp_roundtrip.rs  fo4_live.rs  skyrim_live.rs
tests/testdata/: README.txt
