[workspace]
members = [
    "crates/bethkit-io",
    "crates/bethkit-core",
    "crates/bethkit-bsa",
    "crates/bethkit-ffi",
]
resolver = "2"

[workspace.dependencies]
thiserror  = "1"
memmap2    = "0.9"
flate2     = "1"
lz4_flex   = "0.11"
bitflags   = "2"
tempfile   = "3"
ahash      = "0.8"
bstr       = "1"
rayon      = "1"
once_cell  = "1"

[profile.release]
lto           = "fat"
opt-level     = 3
codegen-units = 1
