[package]
name    = "bethkit-core"
version = "0.3.0"
edition = "2021"

[dev-dependencies]
bethkit-bsa = { path = "../bethkit-bsa" }

[dependencies]
bethkit-io = { path = "../bethkit-io" }
bitflags   = { workspace = true }
ahash      = { workspace = true }
bstr       = { workspace = true }
once_cell  = { workspace = true }
thiserror  = { workspace = true }
