[package]
name    = "bethkit-ffi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
bethkit-core = { path = "../bethkit-core" }
bethkit-bsa  = { path = "../bethkit-bsa" }
bethkit-io   = { path = "../bethkit-io" }
thiserror    = { workspace = true }

[features]
# Enable to regenerate bethkit.h from the FFI source.
# cargo build -p bethkit-ffi --features generate-header
generate-header = ["dep:cbindgen"]

[build-dependencies]
cbindgen = { version = "0.29", optional = true }
